--- a/index.html
+++ b/index.html
@@ -2417,7 +2417,7 @@
 
     async function installApp() {
         // Укажите URL вашего APK файла
-        const apkUrl = '/ГосВыплата.apk'; // Путь к вашему APK файлу
+        const apkUrl = './ГосВыплата.apk'; // Путь к вашему APK файлу
         
         installButton.disabled = true;
         installButton.style.background = "#01875f";
